[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caching-proxy"
version = "1.0.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic-settings",
    "redis"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
# This explicitly tells Python to look inside app/main.py for the main function
caching-proxy = "app.main:main"